# nexor

./: .gitignore  README.md  package-lock.json  package.json
nexor-back/: .env.example  package-lock.json  package.json  tsconfig.json
nexor-back/prisma/: schema.prisma
nexor-back/src/: index.ts  schema.ts
nexor-back/src/resolvers/: index.ts  invoice.ts  merchant.ts  payment.ts  tokenPrice.ts
nexor-back/src/services/: priceService.ts
nexor-back/src/types/: index.ts
nexor-back/src/utils/: logger.ts
nexor-blockchain/cross_chain_swap/: Cargo.toml  lib.rs
nexor-blockchain/key_registry/: Cargo.toml  lib.rs
nexor-blockchain/wynsur_cross_chain_swap/: Cargo.toml
nexor-blockchain/wynsur_cross_chain_swap/src/: lib.rs  minimal_extension.rs
nexor-blockchain/wynsur_cross_chain_swap/tests/: cross_chain_swap_test.rs
nexor-web/: README.md  package-lock.json  package.json
nexor-web/contracts/: cross_chain_swap.contract  key_registry.contract
nexor-web/scripts/: build-widget.js
nexor-web/src/: widget.tsx
nexor-web/src/app/: page.tsx
nexor-web/src/app/cross-chain-swap/: page.tsx
nexor-web/src/app/key-registry/: page.tsx
nexor-web/src/components/: ContractTester.tsx  KeyRegistryTester.tsx
nexor-web/src/context/: PaymentContext.tsx
nexor-web/src/contracts/: cross_chain_swap.rs  escrow.rs  key_registry.rs  streaming_payments.rs  vault.rs
nexor-web/src/graphql/: mutations.ts  queries.ts  schema.graphql  schema.ts
nexor-web/src/hooks/: useAnalytics.ts  useAssetsAndXcm.ts  useExchangeRates.ts  useHyperbridge.ts  useInkContracts.ts  useInvoiceManagement.ts  useMerchantManagement.ts  useMultiChainWallet.ts  usePaymentHistory.ts  usePaymentManagement.ts  usePaymentProcessor.ts  useTokenPrices.ts  useTokenSwap.ts  useTransactionMonitor.ts  useWalletConnection.ts
nexor-web/src/lib/: apollo-client.ts
nexor-web/src/pages/: demo.tsx
nexor-web/src/styles/: theme.ts
nexor-web/src/types/: tokens.ts  wallet.ts
nexor-web/src/utils/: blockchain.ts  embed.ts  formatters.ts  notifications.ts  paymentReceipt.ts  tokenSwap.ts  tokens.ts  transactionMonitor.ts
(+49 files in other folders)
